fixed labels && Fucking Console Errors

--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -64,5 +64,6 @@
     "kcal": "kcal",
     "steps": "Steps",
     "avg": "Avg",
+    "Continue": "Continue",
     "recent_activities": "Recent Activities"
 }
