feat copy, copy all, duplicate implementation

--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -65,5 +65,6 @@
     "steps": "Steps",
     "avg": "Avg",
     "Continue": "Continue",
-    "recent_activities": "Recent Activities"
+    "recent_activities": "Recent Activities",
+    "Statr": "Start"
 }
