--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -66,5 +66,7 @@
     "avg": "Avg",
     "Continue": "Continue",
     "recent_activities": "Recent Activities",
-    "Statr": "Start"
+    "Start": "Start",
+    "Cancel": "Cancel",
+    "Delete": "Delete"
 }
